# darkpoc-template-fastapi-maf-copilotkit

./: .gitignore  CLAUDE.md  README.md  dd-init.sh  docker-compose.yml
.github/workflows/: attestations.yml  ci.yml  claude.yml  dependency-review.yml  notify-merge.yml  sbom.yml  security-audit.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: dd_init.py  main.py
backend/app/agents/: haiku_agent.py
backend/app/tests/: test_smoke.py
frontend/: .env.example  Dockerfile  instrumentation.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/test/: example.test.tsx
infra/: github-branch-protection.json
